# rust_crud

./: .env.example  .gitignore  Cargo.toml  docker-compose.yml  source_env.ps1
migrations/: 20240310164106_tables.sql
src/: main.rs  state.rs
src/api/: user.rs  users.rs
src/core/: auth.rs  errors.rs  mod.rs  state.rs
src/dto/: login.rs  user.rs
src/models/: mod.rs  user.rs
src/services/: login.rs  user.rs
src/util/: mod.rs  uuid.rs
