[package]
name = "rust_crud"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.2", features = ["full"] }
tokio = { version = "1.36", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }