[package]
name = "rust_crud"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "macros", "uuid", "time" ] }
futures = "0.3"
serde_json = "1.0"
uuid = { version = "1.7", features = ["serde"] }
time = { version = "0.3.34", features = ["serde"] }
